Added GIMP files to source control.  Added app icons, removed stock icons.  Tweaked a layout to use device-independent pixels instead of real pixels, so the uses-sdk directive works as expected.  Updated the uses-sdk directive.

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,7 +8,7 @@
 		android:id="@+id/grid_view"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
-		android:columnWidth="128px"
+		android:columnWidth="128dp"
 		android:numColumns="auto_fit"
 		android:stretchMode="spacingWidthUniform"
 		/>
